:sparkles: Add transcribe management command and dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "django-click",
     "django-prodserver[gunicorn]",
     "environs[django]",
+    "mlx-whisper",
     "psycopg[binary]",
     "whitenoise",
 ]
