--- a/compose.yml
+++ b/compose.yml
@@ -12,29 +12,38 @@ x-common-settings: &common-settings
     - .:/src:cache
 
 services:
-
   utility:
     <<: *common-settings
-    command: [
-      "uv",
-      "run",
-      "-m",
-      "manage",
-      "--version"
-    ]
+    command: ["uv", "run", "-m", "manage", "--version"]
     tty: true
+
+  db:
+    environment:
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-d", "postgres"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+    image: "pgautoupgrade/pgautoupgrade:17-alpine"
+    init: true
+    user: postgres
+    volumes:
+      - .:/src:cache
+      - postgres-data:/var/lib/postgresql/data/
 
   web:
     <<: *common-settings
-    command: [
-      "uv",
-      "run",
-      "-m",
-      "manage",
-      "devserver",
-      "--skip-checks",
-      "0.0.0.0:8000"
-    ]
+    command:
+      [
+        "uv",
+        "run",
+        "-m",
+        "manage",
+        "devserver",
+        "--skip-checks",
+        "0.0.0.0:8000",
+      ]
     entrypoint: ["/src/compose-entrypoint.sh"]
     init: true
     ports:
