--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
     -   id: ruff
         args:
         - --fix
+        - --unsafe-fixes
     -   id: ruff-format
 -   repo: https://github.com/asottile/pyupgrade
     rev: v3.20.0
